2009-04-22  Martin Leidig  <mleidig@schlund.de>

	Added support for running webapps from the source directory using
	'mvn tomcat:run'.
	Running from source means that src/main/webapp is used as docroot, but
	resources like the extracted core and module files and the
	buildtime.prop file are located in the target directory. Pustefix now
	is able to load these resources anyway by using the target artifact
	directory as an alternative fallback docroot when running from source.
	Running a webapp from source enables Pustefix to immediately reload
	changed resources without having to do a rebuild with maven.

2009-04-20  Martin Leidig  <mleidig@schlund.de>

	Adapted dynamic module inclusion to new directory layout (e.g. omit
	project path component, remove common directory fallback, etc.).

2009-04-20  Martin Leidig  <mleidig@schlund.de>

	Fixed problem in TargetGenerator occurring when modtime-check is
	disabled, but targets aren't pre-built (URI problem when trying to
	load module resources from file system).

2009-04-20  Martin Leidig  <mleidig@schlund.de>

	Fixed submit action bug (ignore unknown actions for next page selected
	by pageflow mechanism).

2009-04-17  Martin Leidig  <mleidig@schlund.de>

	Made deref-service configuration element optional and set mustsign to
	true by default.

	Fixed NPE occurring when edit mode is disabled and no TestRecording
	bean is registered/configured.

2009-04-16  Martin Leidig  <mleidig@schlund.de>

	Fixed editmode configuration. Now the editor/enabled setting is used
	to decide if the editor can be called (and, e.g. the result DOM can be
	viewed). If the console/tooling extensions are rendered into the sites
	is still decided by the make mode retrieved from the
	BuildTimeProperties. In future versions we should support that the
	editor and other tooling extensions, like the DOM tree view, can be
	enabled/disabled independently and we shouldn't rely on the mode
	property to set prohibitEdit.
